# hms-framework

./: MANIFEST.in  README.md  conftest.py  manage.py  pytest.ini  requirements.txt  setup.cfg
hms_framework/: admin.py  apps.py  factory.py  forms.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
hms_framework/api/: paginations.py  permissions.py  serializers.py  urls.py  views.py
hms_framework/api/tests/: test_rest_api.py
hms_framework/interfaces/application/: logger_service.py
hms_framework/interfaces/auth/: authentication_service.py
hms_framework/interfaces/patterns/: command.py  model_factory.py  service_factory.py  template_debt_collector.py  visitor.py
hms_framework/interfaces/ui/: chart.py  countable_date_resource.py  countable_date_resource_item.py
hms_framework/management/commands/: collect_debts.py  export_daily.py
hms_framework/services/auth/: authenticator.py
hms_framework/services/booking/: create_customer.py  make_booking.py  search_availability.py
hms_framework/services/exports/: export_to_pdf.py
hms_framework/services/financial/: build_invoice.py  debt_collector.py  mark_payment.py
hms_framework/services/ui/: bar_horizontal.py  bar_vertical.py  empty_rooms_daily.py  guests_daily.py
hms_framework/value_object/booking/: create_customer_request.py  create_customer_response.py
hms_framework/value_object/financial/: build_invoice_request.py  build_invoice_response.py
hms_framework/views/: base_logged.html  login.html
hms_framework/views/booking/: checkin.html  checkin_dialog.html  checkout.html  (+2 more)
(+9 files in other folders)
