[metadata]
name = hms-framework
version = 0.1
description = An extendable Django app to Manage Hotels.
long_description = file: README.rst
url = https://www.ul.ie/
author = Bruno Manuel Quintana
author_email = 20225547@studentmail.ul.ie
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    Django >= 3.1.2
    django-resized==0.3.11
    pytest==6.2.4
    pillow==8.3.1